[package]
name = "clcalc"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Honse"]
description = "desc"
repository = "https://github.com/TheDrJosh/cl-calc"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
