[package]
name = "cl-calc"
version = "1.0.2"
edition = "2021"
authors = ["Joshua Honse"]
description = "A command line calculator."
repository = "https://github.com/TheDrJosh/cl-calc"
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
